Improve introduction to Refit

--- a/_posts/2023/2023-03-08-refitter.md
+++ b/_posts/2023/2023-03-08-refitter.md
@@ -19,7 +19,9 @@ redirect_from:
 
 [Refit](https://github.com/reactiveui/refit) is awesome and I use quite a lot in systems that involve a lot of HTTP integration points. With Refit, I can keep my API client code as nothing but an interface with some magic sauce behind the scenes.
 
-For those who don't know, [Refit](https://github.com/reactiveui/refit) is an automatic type-safe REST library for .NET. This currently supports the following platforms and any .NET Standard 2.0 target:
+For those who don't know, [Refit](https://github.com/reactiveui/refit) is an automatic type-safe REST library for .NET. Refit is heavily inspired by Square's [Retrofit](https://square.github.io/retrofit/) library for Android and Java. [Refit](https://github.com/reactiveui/refit) turns your REST API into a live interface.
+
+This currently supports the following platforms and any .NET Standard 2.0 target:
 - UWP
 - Xamarin.Android
 - Xamarin.Mac
@@ -47,6 +49,7 @@ Since I'm generally a lazy person who hates repeating the same tasks more than o
 - [Visual Studio 2019](https://marketplace.visualstudio.com/items?itemName=ChristianResmaHelle.ApiClientCodeGenerator)
 - [Visual Studio 2022](https://marketplace.visualstudio.com/items?itemName=ChristianResmaHelle.ApiClientCodeGenerator2022)
 - [Visual Studio for Mac 2022](https://github.com/christianhelle/apiclientcodegen/blob/master/docs/VisualStudioForMac.md)
+
 
 ## CLI Tool
 
@@ -87,6 +90,7 @@ $ refitter [path to OpenAPI spec file] --namespace "[Your.Namespace.Of.Choice.Ge
 ```
 
 This will generate a file called `Output.cs` which contains the Refit interface and contract classes generated.
+
 
 ## REST API Client Code Generator
 
