Add "Introducing Refitter" section

--- a/_posts/2023/2023-03-08-refitter.md
+++ b/_posts/2023/2023-03-08-refitter.md
@@ -41,9 +41,11 @@ public interface IFooApi
 }
 ```
 
-Since I'm generally a lazy person who hates repeating the same tasks more than once, I immediately thought that this could be done easier. So I created [Refitter](https://github.com/christianhelle/refitter).
+## Introducing Refitter
 
-[Refitter](https://github.com/christianhelle/refitter) is a CLI tool for generating a C# REST API Client using the [Refit](https://github.com/reactiveui/refit) library. Refitter can generate the Refit interface (and contracts using [NSwag](https://github.com/RicoSuter/NSwag)) from **OpenAPI specifications**. 
+I'm generally a lazy person who hates repeating the same tasks more than once and recently I thought that working with Refit could be done easier, so I created [Refitter](https://github.com/christianhelle/refitter).
+
+[Refitter](https://github.com/christianhelle/refitter) is an open source CLI tool for generating a C# REST API Client using the [Refit](https://github.com/reactiveui/refit) library. Refitter can generate the Refit interface (and contracts using [NSwag](https://github.com/RicoSuter/NSwag)) from **OpenAPI specifications**. 
 
 [Refitter](https://github.com/christianhelle/refitter) is available in different forms as a CLI Tool and from the [REST API Client Code Generator](https://github.com/christianhelle/apiclientcodegen) extension that supports the following IDE:
 - [Visual Studio 2019](https://marketplace.visualstudio.com/items?itemName=ChristianResmaHelle.ApiClientCodeGenerator)
