Split up into smaller sections

--- a/_posts/2023/2023-03-08-refitter.md
+++ b/_posts/2023/2023-03-08-refitter.md
@@ -17,21 +17,21 @@ redirect_from:
 - /refitter
 ---
 
-[Refit](https://github.com/reactiveui/refit) is awesome and I use quite a lot in systems that involve a lot of HTTP integration points. With Refit, I can keep my API client code as nothing but an interface with some magic sauce behind the scenes.
+[Refit](https://github.com/reactiveui/refit) is an awesome tool that I only just recently discovered and started using in systems that involve a lot of HTTP API integration points. With [Refit](https://github.com/reactiveui/refit), I can keep my API client code as simple as an interface with some magic sauce behind the scenes.
 
-For those who don't know, [Refit](https://github.com/reactiveui/refit) is an automatic type-safe REST library for .NET. Refit is heavily inspired by Square's [Retrofit](https://square.github.io/retrofit/) library for Android and Java. [Refit](https://github.com/reactiveui/refit) turns your REST API into a live interface.
+For those aren't familiar with [Refit](https://github.com/reactiveui/refit), it is an automatic type-safe REST library for .NET. [Refit](https://github.com/reactiveui/refit) is heavily inspired by Square's [Retrofit](https://square.github.io/retrofit/) library for Android and Java. [Refit](https://github.com/reactiveui/refit) turns your REST API into a live interface.
 
-This currently supports the following platforms and any .NET Standard 2.0 target:
-- UWP
+[Refit](https://github.com/reactiveui/refit) currently supports the following platforms and any .NET Standard 2.0 target:
+- .NET Framework 4.6.1 and above
+- .NET 5.0 and above
 - Xamarin.Android
 - Xamarin.Mac
 - Xamarin.iOS
-- Desktop .NET 4.6.1
-- .NET 5 / .NET Core
 - Blazor
 - Uno Platform
+- UWP
 
-Given that [Refit](https://github.com/reactiveui/refit) will actually do most of the work, you still need to create the [Refit](https://github.com/reactiveui/refit) interface and the contracts that are used by the HTTP API you're system is calling. A [Refit](https://github.com/reactiveui/refit) interface could be something as simple as:
+Given that [Refit](https://github.com/reactiveui/refit) will actually do most of the work, you still need to create the [Refit](https://github.com/reactiveui/refit) interface and the contracts that are used by the HTTP API your system is calling. A [Refit](https://github.com/reactiveui/refit) interface could be something as simple as:
 
 ```cs
 public interface IFooApi
@@ -41,11 +41,14 @@ public interface IFooApi
 }
 ```
 
+Using the interface above would be the equivalent of performing `GET https://foo.api.somesystem.com/foo/12345` which returns a deserialized `Foo` resource
+
+
 ## Introducing Refitter
 
-I'm generally a lazy person who hates repeating the same tasks more than once and recently I thought that working with Refit could be done easier, so I created [Refitter](https://github.com/christianhelle/refitter).
+I'm generally a lazy person who hates repeating the same tasks more than once and recently I thought that working with [Refit](https://github.com/reactiveui/refit) could be done easier, so I created [Refitter](https://github.com/christianhelle/refitter).
 
-[Refitter](https://github.com/christianhelle/refitter) is an open source CLI tool for generating a C# REST API Client using the [Refit](https://github.com/reactiveui/refit) library. Refitter can generate the Refit interface (and contracts using [NSwag](https://github.com/RicoSuter/NSwag)) from **OpenAPI specifications**. 
+[Refitter](https://github.com/christianhelle/refitter) is an open source CLI tool for generating a C# REST API Client using the [Refit](https://github.com/reactiveui/refit) library. Refitter can generate the [Refit](https://github.com/reactiveui/refit) interface (and contracts using [NSwag](https://github.com/RicoSuter/NSwag)) from **OpenAPI specifications**. [Refitter](https://github.com/christianhelle/refitter) is also available as a [library](https://www.nuget.org/packages/Refitter.Core) for other IDE extension and develop tool authors to integrate with
 
 [Refitter](https://github.com/christianhelle/refitter) is available in different forms as a CLI Tool and from the [REST API Client Code Generator](https://github.com/christianhelle/apiclientcodegen) extension that supports the following IDE:
 - [Visual Studio 2019](https://marketplace.visualstudio.com/items?itemName=ChristianResmaHelle.ApiClientCodeGenerator)
@@ -91,7 +94,7 @@ To generate code from an OpenAPI specifications file, run the following:
 $ refitter [path to OpenAPI spec file] --namespace "[Your.Namespace.Of.Choice.GeneratedCode]"
 ```
 
-This will generate a file called `Output.cs` which contains the Refit interface and contract classes generated.
+This will generate a file called `Output.cs` which contains the [Refit](https://github.com/reactiveui/refit) interface and contract classes generated.
 
 
 ## REST API Client Code Generator
@@ -106,11 +109,11 @@ and in Visual Studio for Mac it looks like this:
 
 ![](/assets/images/vsmac-add-new-menu.png)
 
-From there I select **Generate with Refitter** and get this a prompt that looks like this:
+From the context menu, select **Generate with Refitter** and get this a prompt that looks like this:
 
 ![](/assets/images/vs2022-add-new-dialog.png)
 
-This will result in the file being downloaded, included in your project, and configured to use a custom tool that generates a code behind file upon any changes on the OpenAPI specifications file
+This will result in the file being OpenAPI (Swagger) specifications file to be downloaded, included in your project, and configured to use a custom tool that generates a code behind file upon any changes on the OpenAPI specifications file
 
 ![](/assets/images/refittercodegenerator-custom-tool.jpg)
 
@@ -227,6 +230,10 @@ namespace Your.Namespace.Of.Choice.GeneratedCode
 }
 ```
 
+[Refit](https://github.com/reactiveui/refit) provides two ways to use the interface:
+- Resolve the interface via the `RestService` class
+- Register the [Refit](https://github.com/reactiveui/refit) interface with [HttpClientFactory](https://learn.microsoft.com/en-us/dotnet/architecture/microservices/implement-resilient-applications/use-httpclientfactory-to-implement-resilient-http-requests?WT.mc_id=DT-MVP-5004822) and use it through dependency injection
+
 ### RestService
 
 Here's an example usage of the generated code above
@@ -319,3 +326,5 @@ Returns a response that looks something like this:
   "status": "Sold"
 }
 ```
+
+For those of you who never tried [Refit](https://github.com/reactiveui/refit), I think that you should definitely check it out. It's very easy to use
