Fix redirect_from entries for 2023 posts

--- a/_posts/2023/2023-03-08-refitter.md
+++ b/_posts/2023/2023-03-08-refitter.md
@@ -9,7 +9,7 @@ tags:
 - Refit
 - Visual Studio
 redirect_from:
-- /2023/03/refitter
+- /2023/03/refitter/
 - /2023/03/refitter
 - /2023/refitter/
 - /2023/refitter
