Update refitter installation instructions

--- a/_posts/2023/2023-03-08-refitter.md
+++ b/_posts/2023/2023-03-08-refitter.md
@@ -61,7 +61,7 @@ I'm generally a lazy person who hates repeating the same tasks more than once an
 The CLI tool is packaged as a .NET Tool and is published to [nuget.org](https://www.nuget.org/packages/refitter). You can install the latest version of this tool like this:
 
 ```shell
-dotnet tool install --global Refitter --prerelease
+dotnet tool install --global Refitter
 ```
 
 [Refitter](https://github.com/christianhelle/refitter) provides some `--help` information for getting started
