Update section header

--- a/_posts/2023/2023-03-08-refitter.md
+++ b/_posts/2023/2023-03-08-refitter.md
@@ -120,7 +120,7 @@ This will result in the file being OpenAPI (Swagger) specifications file to be d
 ![](/assets/images/refittercodegenerator-custom-tool.jpg)
 
 
-## Using the generated code
+## Example generated code
 
 Here's an example generated output from the [Swagger Petstore example](https://petstore3.swagger.io)
 
